# ValveFileVDF

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  appveyor.yml  vdf_parser.hpp
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  main.cpp
fuzzing/: CMakeLists.txt  main.cpp
include/: vdf_parser.hpp
python/: CMakeLists.txt  Readme.md  test.py  vdf_python_bindings.cpp
test/: CMakeLists.txt  vdf_parser_test.cpp
test/testdata/: DST_Manifest.acf  baseFile1.vdf  includeFile1.vdf
tests/: CMakeLists.txt  catch.cpp  main.cpp  vdf_parser_test.cpp
tests/proptests/: CMakeLists.txt  main_rapidcheck.cpp
tests/proptests/generators/: string_generator.hpp  vdf_multiobject_generator.cpp  vdf_multiobject_generator.hpp  vdf_object_generator.cpp  vdf_object_generator.hpp
tests/testdata/: DST_Manifest.acf  baseFile1.vdf  broken_file.acf  includeFile1.vdf  issue14.vdf
tests/testdata/fuzzing_data/: crash-1  crash-2  crash-3  timeout-1
